--- a/REACT/Clase 10/style.css
+++ b/REACT/Clase 10/style.css
@@ -11,6 +11,12 @@ body {
 	color: #1d1d1d;
 }
 
+.controlPagina {
+	text-align: center;
+	font-size: 16px;
+	font-weight: 600;
+}
+
 .contenedor {
 	width: 90%;
 	max-width: 1000px;
